--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -91,6 +91,8 @@
             </resource>
         </resources>
         <plugins>
+
+            <!-- Template Engine -->
             <plugin>
                 <groupId>com.fizzed</groupId>
                 <artifactId>rocker-maven-plugin</artifactId>
@@ -127,19 +129,16 @@
                 </executions>
             </plugin>
 
-            <!-- Executable Jar-->
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>jrocks.JRocksApplication</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- Test-->
@@ -160,14 +159,6 @@
                     </dependency>
                 </dependencies>
             </plugin>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <configuration>
-                        <mainClass>jrocks.JRocksApplication</mainClass>
-                    </configuration>
-                </plugin>
-
         </plugins>
     </build>
     <repositories>
