--- a/jrocks-core/src/main/resources/application.yml
+++ b/jrocks-core/src/main/resources/application.yml
@@ -3,6 +3,12 @@ jrocks:
   version: ${project.version}
   classpath:
     auto-rebuild: true
+  sourceDirectory: @project.build.sourceDirectory@
+  scriptSourceDirectory: @project.build.scriptSourceDirectory@
+  testSourceDirectory: @project.build.testSourceDirectory@
+  outputDirectory: @project.build.outputDirectory@
+  testOutputDirectory: @project.build.testOutputDirectory@
+  directory: @project.build.directory@
 
 java:
   version: @java.version@
@@ -10,10 +16,5 @@ java:
 project:
   base-package: jrocks
 
-maven:
-  scriptSourceDirectory: @project.build.scriptSourceDirectory@
-  testSourceDirectory: @project.build.testSourceDirectory@
-  outputDirectory: @project.build.outputDirectory@
-  testOutputDirectory: @project.build.testOutputDirectory@
-  directory: @project.build.directory@
+
 
