--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-
-
-######################
-# Pproject specifics #
-######################
-.jrocks
-jrocks_completion
-
 ######################
 # Eclipse
 ######################
@@ -57,8 +49,8 @@ out/
 ######################
 # Maven
 ######################
-/log/
-/target/
+*/log/
+*/target/
 
 ######################
 # Package Files
