--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -43,7 +43,7 @@
             <version>0.0.1</version>
         </dependency>
 
-        <!-- Rocker be.unlock.jrocks.template engine deps -->
+        <!-- Rocker template engine deps -->
         <dependency>
             <groupId>com.fizzed</groupId>
             <artifactId>rocker-runtime</artifactId>
@@ -63,11 +63,16 @@
             <version>2.0.1.Final</version>
         </dependency>
 
-        <!-- Command line deps -->
+        <!-- Spring boot deps -->
         <dependency>
             <groupId>org.springframework.shell</groupId>
             <artifactId>spring-shell-starter</artifactId>
             <version>2.0.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- Test deps -->
@@ -83,6 +88,11 @@
             <groupId>io.github.classgraph</groupId>
             <artifactId>classgraph</artifactId>
             <version>4.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <version>3.3.9</version>
         </dependency>
     </dependencies>
 
