--- a/jrocks-samples/pom.xml
+++ b/jrocks-samples/pom.xml
@@ -30,7 +30,7 @@
        </dependencies>
     <build>
         <plugins>
-            <!-- Test-->
+            <!-- NewTestClass-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
