--- a/jrocks-package/pom.xml
+++ b/jrocks-package/pom.xml
@@ -11,9 +11,8 @@
         <version>0.0.1</version>
     </parent>
 
-    <artifactId>jrocks-package</artifactId>
-    <name>jrocks</name>
-    <version>${jrocks.version}</version>
+    <artifactId>jrocks</artifactId>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -21,36 +20,12 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.0.0.RELEASE</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>jrocks.JRocksApplication</mainClass>
-                    <executable>true</executable>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <dependency>
             <groupId>be.unlock</groupId>
             <artifactId>jrocks-core</artifactId>
             <version>${project.version}</version>
+            <classifier>run</classifier>
         </dependency>
         <dependency>
             <groupId>be.unlock</groupId>
@@ -58,4 +33,32 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>distro-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/assembly/package.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
