--- a/jrocks-package/pom.xml
+++ b/jrocks-package/pom.xml
@@ -44,6 +44,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>distro-assembly</id>
