--- a/jrocks-core/src/main/resources/application.yml
+++ b/jrocks-core/src/main/resources/application.yml
@@ -2,3 +2,11 @@ jrocks:
   name: jrocks
   version: ${project.version}
   configFilename: .jrocks
+
+spring:
+  banner:
+    location: classpath:/banner.txt
+    charset: UTF-8
+logging:
+  level:
+    ROOT: ERROR
