--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -91,6 +91,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.5.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
@@ -98,6 +99,7 @@
                         </goals>
                         <configuration>
                             <classifier>run</classifier>
+                            <layout>ZIP</layout>
                         </configuration>
                     </execution>
                 </executions>
