--- a/jrocks-gen-bean/pom.xml
+++ b/jrocks-gen-bean/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <artifactId>jrocks-gen-bean</artifactId>
-    <version>${jrocks.version}</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <properties>
