--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -77,6 +77,14 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+
+        <!-- Test -->
+        <dependency>
+            <groupId>org.junit-pioneer</groupId>
+            <artifactId>junit-pioneer</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
