--- a/jrocks-core/src/main/resources/application.yml
+++ b/jrocks-core/src/main/resources/application.yml
@@ -2,11 +2,14 @@ jrocks:
   name: jrocks
   version: ${project.version}
   configFilename: .jrocks
+  pluginDirectory: ${JROCKS_HOME}/plugins
 
 spring:
   banner:
     location: classpath:/banner.txt
     charset: UTF-8
+
 logging:
   level:
     ROOT: ERROR
+
