--- a/jrocks-parent/pom.xml
+++ b/jrocks-parent/pom.xml
@@ -22,8 +22,12 @@
     <modules>
         <module>../jrocks-samples</module>
         <module>../jrocks-core</module>
-        <module>../jrocks-gen-test</module>
-        <module>../jrocks-gen-bean</module>
+        <!--<module>../jrocks-gen-test</module>-->
+        <!--<module>../jrocks-gen-bean</module>-->
+
+        <module>../jrocks-plugin-api</module>
+        <module>../jrocks-plugin-bean</module>
+
         <module>../jrocks-package</module>
     </modules>
 
