--- a/jrocks-plugin-bean/pom.xml
+++ b/jrocks-plugin-bean/pom.xml
@@ -3,18 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    
     <parent>
-        <groupId>be.unlock</groupId>
         <artifactId>jrocks-parent</artifactId>
+        <groupId>be.unlock</groupId>
         <version>0.0.1</version>
     </parent>
 
-    <artifactId>jrocks-plugin-api</artifactId>
+    <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <artifactId>jrocks-plugin-bean</artifactId>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>be.unlock</groupId>
+            <artifactId>jrocks-plugin-api</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
