--- a/jrocks-plugin-bean/pom.xml
+++ b/jrocks-plugin-bean/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>jrocks-plugin-api</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>javapoet</artifactId>
+            <version>1.11.1</version>
+        </dependency>
 
     </dependencies>
 
