--- a/jrocks-plugin-bean/pom.xml
+++ b/jrocks-plugin-bean/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>javapoet</artifactId>
             <version>1.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.1.0.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
