--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -8,11 +8,11 @@
     <parent>
         <groupId>be.unlock</groupId>
         <artifactId>jrocks-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jrocks-core</artifactId>
-    <version>0.0.1</version>
+    <version>0.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencyManagement>
@@ -27,7 +27,7 @@
             <dependency>
                 <groupId>be.unlock</groupId>
                 <artifactId>jrocks-parent</artifactId>
-                <version>0.0.1</version>
+                <version>0.3.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -46,13 +46,6 @@
             <artifactId>jrocks-plugin-bean</artifactId>
             <version>${project.version}</version>
             <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>be.unlock</groupId>
-            <artifactId>jrocks-sample</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- Spring Boot -->
