--- a/jrocks-parent/pom.xml
+++ b/jrocks-parent/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>be.unlock</groupId>
     <artifactId>jrocks-parent</artifactId>
-    <version>0.0.1</version>
+    <version>0.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -165,6 +165,10 @@
 
         </dependencies>
     </dependencyManagement>
+    <scm>
+        <developerConnection>scm:git:file:///home/fons/dev/jrocks/.git</developerConnection>
+      <tag>jrocks-parent-0.3.0</tag>
+  </scm>
     <build>
         <plugins>
             <plugin>
