--- a/jrocks-plugin-api/pom.xml
+++ b/jrocks-plugin-api/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>be.unlock</groupId>
         <artifactId>jrocks-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jrocks-plugin-api</artifactId>
