--- a/jrocks-plugin-bean/pom.xml
+++ b/jrocks-plugin-bean/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>jrocks-parent</artifactId>
         <groupId>be.unlock</groupId>
-        <version>0.0.1</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>be.unlock</groupId>
             <artifactId>jrocks-plugin-api</artifactId>
-            <version>0.0.1</version>
+            <version>0.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.squareup</groupId>
