--- a/jrocks-plugin-test/pom.xml
+++ b/jrocks-plugin-test/pom.xml
@@ -8,11 +8,11 @@
     <parent>
         <groupId>be.unlock</groupId>
         <artifactId>jrocks-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jrocks-plugin-test</artifactId>
-    <version>0.0.1</version>
+    <version>0.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
