--- a/jrocks/pom.xml
+++ b/jrocks/pom.xml
@@ -8,11 +8,11 @@
     <parent>
         <groupId>be.unlock</groupId>
         <artifactId>jrocks-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jrocks</artifactId>
-    <version>0.0.1</version>
+    <version>0.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -24,13 +24,13 @@
         <dependency>
             <groupId>be.unlock</groupId>
             <artifactId>jrocks-core</artifactId>
-            <version>0.0.1</version>
+            <version>0.3.0-SNAPSHOT</version>
             <classifier>run</classifier>
         </dependency>
         <dependency>
             <groupId>be.unlock</groupId>
             <artifactId>jrocks-plugin-bean</artifactId>
-            <version>0.0.1</version>
+            <version>0.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
