--- a/jrocks-parent/pom.xml
+++ b/jrocks-parent/pom.xml
@@ -157,18 +157,14 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.2.3</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.4</version>
-            </dependency>
 
         </dependencies>
     </dependencyManagement>
     <scm>
+        <url>scm:git:file:///home/fons/dev/jrocks/.git</url>
+        <connection>scm:git:file:///home/fons/dev/jrocks/.git</connection>
         <developerConnection>scm:git:file:///home/fons/dev/jrocks/.git</developerConnection>
-      <tag>jrocks-parent-0.3.0</tag>
-  </scm>
+    </scm>
     <build>
         <plugins>
             <plugin>
