--- a/jrocks-parent/pom.xml
+++ b/jrocks-parent/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>be.unlock</groupId>
     <artifactId>jrocks-parent</artifactId>
-    <version>0.3.0</version>
+    <version>0.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
