--- a/jrocks-plugin-bean/pom.xml
+++ b/jrocks-plugin-bean/pom.xml
@@ -31,6 +31,12 @@
             <version>5.1.0.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.shell</groupId>
+            <artifactId>spring-shell-standard</artifactId>
+            <version>2.0.1.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
