--- a/jrocks-parent/pom.xml
+++ b/jrocks-parent/pom.xml
@@ -20,6 +20,7 @@
         <module>../jrocks-plugin-api</module>
         <module>../jrocks-plugin-test</module>
         <module>../jrocks-plugin-bean</module>
+        <module>../jrocks-plugin-jaxrs</module>
         <module>../jrocks-core</module>
         <module>../jrocks</module>
     </modules>
