--- a/jrocks-plugin-archetype/pom.xml
+++ b/jrocks-plugin-archetype/pom.xml
@@ -9,6 +9,12 @@
     <packaging>maven-archetype</packaging>
 
     <name>jrocks-plugin-archetype</name>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
+    </properties>
 
     <build>
         <extensions>
