--- a/jrocks-plugin-jaxrs/pom.xml
+++ b/jrocks-plugin-jaxrs/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>${artifactId}</artifactId>
-    <version>${version}</version>
-    <groupId>${groupId}</groupId>
-
     <parent>
-        <groupId>be.unlock</groupId>
         <artifactId>jrocks-parent</artifactId>
+        <groupId>be.unlock</groupId>
         <version>0.3.0-SNAPSHOT</version>
     </parent>
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>jrocks-plugin-jaxrs</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
