--- a/jrocks-plugin-jaxrs2/pom.xml
+++ b/jrocks-plugin-jaxrs2/pom.xml
@@ -1,18 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
+?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>jrocks-parent</artifactId>
+        <groupId>be.unlock</groupId>
+        <version>0.3.1-SNAPSHOT</version>
+        <relativePath>../jrocks-parent/pom.xml</relativePath>
+    </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>${artifactId}</artifactId>
-    <version>${version}</version>
-    <groupId>${groupId}</groupId>
-
-    <parent>
-        <groupId>be.unlock</groupId>
-        <artifactId>jrocks-parent</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
-    </parent>
+    <artifactId>jrocks-plugin-jaxrs2</artifactId>
 
     <dependencies>
         <dependency>
