--- a/jrocks-plugin-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/jrocks-plugin-archetype/src/main/resources/archetype-resources/pom.xml
@@ -14,6 +14,13 @@
         <version>0.3.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>be.unlock</groupId>
