--- a/jrocks-plugin-bean/pom.xml
+++ b/jrocks-plugin-bean/pom.xml
@@ -3,16 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>jrocks-parent</artifactId>
         <groupId>be.unlock</groupId>
         <version>0.3.0-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>jrocks-plugin-bean</artifactId>
-
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
