--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -39,6 +39,12 @@
             <version>${project.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>be.unlock</groupId>
+            <artifactId>jrocks-plugin-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Spring Boot -->
         <dependency>
@@ -50,11 +56,6 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-devtools</artifactId>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
 
         <!-- Reflection -->
         <dependency>
