--- a/jrocks-springular/springular-frontend/package.json
+++ b/jrocks-springular/springular-frontend/package.json
@@ -12,45 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.2",
-    "@angular/common": "5.0.2",
-    "@angular/compiler": "5.0.2",
-    "@angular/core": "5.0.2",
-    "@angular/forms": "5.0.2",
-    "@angular/http": "5.0.2",
-    "@angular/material": "5.0.0-rc.1",
-    "@angular/cdk": "5.0.0-rc.1",
-    "@angular/platform-browser": "5.0.2",
-    "@angular/platform-browser-dynamic": "5.0.2",
-    "@angular/platform-server": "5.0.2",
-    "@angular/router": "5.0.2",
-    "@angular/flex-layout": "2.0.0-beta.10-4905443",
-    "core-js": "2.5.1",
+    "@angular-devkit/schematics": "7.0.5",
+    "@angular/animations": "7.0.3",
+    "@angular/cdk": "7.0.4",
+    "@angular/common": "7.0.3",
+    "@angular/compiler": "7.0.3",
+    "@angular/core": "7.0.3",
+    "@angular/flex-layout": "7.0.0-beta.19",
+    "@angular/forms": "7.0.3",
+    "@angular/http": "7.0.3",
+    "@angular/material": "7.0.4",
+    "@angular/platform-browser": "7.0.3",
+    "@angular/platform-browser-dynamic": "7.0.3",
+    "@angular/platform-server": "7.0.3",
+    "@angular/router": "7.0.3",
+    "core-js": "2.5.7",
     "hammerjs": "2.0.8",
-    "rxjs": "5.5.2",
-    "zone.js": "0.8.18"
+    "ng": "0.0.0",
+    "rxjs": "6.3.3",
+    "zone.js": "0.8.26",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^0.6.3",
-    "@angular/cli": "1.5.3",
-    "@angular/compiler-cli": "5.0.2",
-    "@angular/language-service": "5.0.2",
-    "@types/hammerjs": "2.0.34",
-    "@types/jasmine": "2.5.54",
-    "@types/jasminewd2": "2.0.3",
-    "@types/node": "6.0.90",
-    "codelyzer": "3.2.2",
-    "jasmine-core": "2.6.4",
-    "jasmine-spec-reporter": "4.1.1",
-    "karma": "1.7.1",
-    "karma-chrome-launcher": "2.1.1",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/core": "^7.0.5",
+    "@angular/cli": "^7.0.5",
+    "@angular/compiler-cli": "7.0.3",
+    "@angular/language-service": "7.0.3",
+    "@types/hammerjs": "2.0.36",
+    "@types/jasmine": "2.8.11",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "10.12.7",
+    "codelyzer": "4.5.0",
+    "jasmine-core": "3.3.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "3.1.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "1.1.0",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.1.2",
-    "ts-node": "3.0.6",
-    "tslint": "5.7.0",
-    "typescript": "2.4.2"
+    "karma-coverage-istanbul-reporter": "2.0.4",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "1.4.0",
+    "protractor": "5.4.1",
+    "ts-node": "7.0.1",
+    "tslint": "5.11.0",
+    "typescript": "3.1.6"
   }
 }
