--- a/jrocks-springular/springular-frontend/angular.json
+++ b/jrocks-springular/springular-frontend/angular.json
@@ -21,7 +21,8 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss",
+              "src/variables.scss"
             ],
             "scripts": []
           },
@@ -71,7 +72,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss",
+              "src/variables.scss"
             ],
             "assets": [
               "src/assets",
@@ -119,7 +121,7 @@
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
-      "styleext": "css"
+      "styleext": "scss"
     },
     "@schematics/angular:directive": {
       "prefix": "app"
