suffixing bean example plugin to -javapoet and -rocker respectively

--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -32,17 +32,17 @@
             <artifactId>jrocks-plugin-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>be.unlock</groupId>-->
-            <!--<artifactId>jrocks-plugin-bean2</artifactId>-->
-            <!--<version>${project.version}</version>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>be.unlock</groupId>
-            <artifactId>jrocks-plugin-bean2</artifactId>
+            <artifactId>jrocks-plugin-bean-rocker</artifactId>
             <version>${project.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>be.unlock</groupId>
+            <artifactId>jrocks-plugin-bean-javapoet</artifactId>
+            <version>${project.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>be.unlock</groupId>
