--- a/jrocks/pom.xml
+++ b/jrocks/pom.xml
@@ -28,7 +28,12 @@
         </dependency>
         <dependency>
             <groupId>be.unlock</groupId>
-            <artifactId>jrocks-plugin-bean</artifactId>
+            <artifactId>jrocks-plugin-bean-rocker</artifactId>
+            <version>0.3.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>be.unlock</groupId>
+            <artifactId>jrocks-plugin-bean-javapoet</artifactId>
             <version>0.3.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
