--- a/jrocks-springular/springular-frontend/pom.xml
+++ b/jrocks-springular/springular-frontend/pom.xml
@@ -36,7 +36,7 @@
         <executions>
           <execution>
             <id>exec-npm-install</id>
-            <phase>generate-sources</phase>
+            <phase>install</phase>
             <configuration>
               <executable>npm</executable>
               <arguments>
@@ -49,7 +49,7 @@
           </execution>
           <execution>
             <id>exec-npm-ng-build</id>
-            <phase>generate-sources</phase>
+            <phase>install</phase>
             <configuration>
               <executable>ng</executable>
               <arguments>
